examples/invalid/extra_tests/allocate_struct.cgl
struct Node {
  string value;
  Node next;
}

fn main() -> int {
  Node n = Node("a", "hi");
  Node t = Node("a", nullptr, "hi");
}
